header bug fix 1440 screen

--- a/customerManage.html
+++ b/customerManage.html
@@ -161,41 +161,12 @@
         @media all and (min-width: 1367px) and (max-width: 1440px) {
             /*header*/
             /*  header profile image  */
-            .profile{
-                width: 78px;
-                height: 75px;
-
-                border-radius: 100%;
-                margin: 0;
-                padding: 0;
-
-                position: relative;
-                top: -15px;
-                left: 252px;
+            #DashGroStore{
+                font-size: 30px;
             }
 
-            #dropdownList{
-                width: 248px;
-                height: 400px;
-                margin: 0;
-            }
-
-            .profileDetail{
-                -webkit-text-fill-color: gray;
-                position: relative;
-                left: 40px;
-                width: fit-content;
-            }
-
-            .position{
-                position: relative;
-                left: 1rem;
-                font-size: 19px;
-            }
-
-            #GroStore{
-                font-size: 24px;
-                -webkit-text-fill-color: purple;
+            #DashGroStore{
+                -webkit-text-fill-color: #590067;
                 font-weight: bold;
             }
 
@@ -205,13 +176,31 @@
                 left: -10px;
             }
 
-            .headerPosition{
-                position: relative;
-                left: 127px;
-                top: 15.5px;
-                height: 107px;
+            #dropdownList{
+                width: 250px;
+                height: 400px;
             }
 
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 40px;
+                width: fit-content;
+            }
 
             .signup{
                 -webkit-text-fill-color: #0066FF;
@@ -226,8 +215,23 @@
                 margin-bottom: 20px;
             }
 
-            .textAlignCenter{
-                text-align: center;
+            .headerPosition{
+                position: relative;
+                left: 152px;
+                top: 0px;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: 0px;
+                left: 220px;
             }
 
             /*--------------------------------------------------------------------------------------------*/
