--- a/storeManage.html
+++ b/storeManage.html
@@ -314,9 +314,12 @@
 
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
-            #GroStore{
-                font-size: 24px;
-                -webkit-text-fill-color: purple;
+            #DashGroStore{
+                font-size: 30px;
+            }
+
+            #DashGroStore{
+                -webkit-text-fill-color: #590067;
                 font-weight: bold;
             }
 
@@ -368,7 +371,7 @@
             .headerPosition{
                 position: relative;
                 left: 152px;
-                top: 15.5px;
+                top: 0px;
             }
 
             .profile{
@@ -380,8 +383,8 @@
                 padding: 0;
 
                 position: relative;
-                top: -15px;
-                left: 252px;
+                top: 0px;
+                left: 220px;
             }
 
             /*  -------------------------------------------------------------------------------------------------  */
