--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/placeOrderCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/buttonAnmation.css">
 
     <style>
 
@@ -718,235 +719,6 @@
             }
         }
 
-        /*!* Styles for Laptop Large (1025px to 1366px) *!*/
-        /*@media all and (min-width: 1025px) and (max-width: 1366px) {*/
-        /*    #GroStore{*/
-        /*        font-size: 24px;*/
-        /*        -webkit-text-fill-color: purple;*/
-        /*        font-weight: bold;*/
-        /*    }*/
-
-        /*    #profileDropdown{*/
-        /*        width: 75px;*/
-        /*        position: relative;*/
-        /*        left: -10px;*/
-        /*    }*/
-
-        /*    #dropdownList{*/
-        /*        width: 250px;*/
-        /*        height: 400px;*/
-        /*    }*/
-
-        /*    #dropdownImage{*/
-
-        /*        width: 170px;*/
-        /*        height: 150px;*/
-
-        /*        border-radius: 100%;*/
-        /*        position: relative;*/
-        /*        left: 39px;*/
-        /*    }*/
-
-        /*    .textAlignCenter{*/
-        /*        text-align: center;*/
-        /*    }*/
-
-        /*    .profileDetail{*/
-        /*        -webkit-text-fill-color: gray;*/
-        /*        position: relative;*/
-        /*        left: 40px;*/
-        /*        width: fit-content;*/
-        /*    }*/
-
-        /*    .signup{*/
-        /*        -webkit-text-fill-color: #0066FF;*/
-        /*        margin-top: 28px;*/
-        /*    }*/
-
-        /*    .logout{*/
-        /*        text-align: center;*/
-        /*        -webkit-text-fill-color: #590067;*/
-        /*        font-weight: bold;*/
-
-        /*        margin-bottom: 20px;*/
-        /*    }*/
-
-        /*    .headerPosition{*/
-        /*        position: relative;*/
-        /*        left: 152px;*/
-        /*        top: 15.5px;*/
-        /*    }*/
-
-        /*    .profile{*/
-        /*        width: 78px;*/
-        /*        height: 75px;*/
-
-        /*        border-radius: 100%;*/
-        /*        margin: 0;*/
-        /*        padding: 0;*/
-
-        /*        position: relative;*/
-        /*        top: -15px;*/
-        /*        left: 162px;*/
-        /*    }*/
-
-
-        /*!*  --------------------------------------------------------------------------------------------------  *!*/
-
-        /*    .titleOrder{*/
-        /*        position: absolute;*/
-        /*        top: 22%;*/
-        /*        width: fit-content;*/
-        /*    }*/
-
-        /*    #line1{*/
-        /*        background-color: gray;*/
-        /*        width: 29rem;*/
-        /*        height: 1px;*/
-
-        /*        opacity: 50%;*/
-
-        /*        position: relative;*/
-        /*        top: -20px;*/
-        /*        left: 158px;*/
-        /*    }*/
-
-        /*    #line2{*/
-        /*        background-color: gray;*/
-        /*        width: 45rem;*/
-        /*        height: 1px;*/
-
-        /*        transform: rotate(90deg);*/
-
-        /*        opacity: 50%;*/
-
-        /*        position: relative;*/
-        /*        left: 21rem;*/
-        /*        top: -19rem;*/
-        /*    }*/
-
-        /*    .margin-bottom{*/
-        /*        margin-bottom: 20px;*/
-        /*    }*/
-
-        /*    .marginZero{*/
-        /*        margin: 0;*/
-        /*    }*/
-
-        /*    .inputFieldMargin{*/
-        /*        margin-left: 27px;*/
-        /*    }*/
-
-        /*    .placeOrderForm{*/
-        /*        padding: 50px;*/
-        /*    }*/
-
-        /*    #addToCartBtn{*/
-        /*        position: absolute;*/
-        /*        right: 53.9%;*/
-
-        /*        background-color: #6F0082;*/
-        /*        border: 0;*/
-
-        /*    }*/
-
-        /*    !*Billing Section*!*/
-
-        /*    .itemsDetails{*/
-        /*        !*width: 612px;*!*/
-        /*        margin: 40px;*/
-
-        /*        position: relative;*/
-        /*        top: 7rem;*/
-        /*    }*/
-
-        /*    .itemsDetails{*/
-        /*        max-height: 340px; !* Set the maximum height of the container *!*/
-        /*        overflow-y: auto; !* Enable vertical scrolling *!*/
-        /*    }*/
-
-        /*    .itemsDetails{*/
-        /*        table-layout: fixed; !* Prevent the table from resizing its columns *!*/
-        /*        white-space: nowrap; !* Prevent text wrapping *!*/
-        /*        overflow-x: auto; !* Enable horizontal scrolling *!*/
-        /*        overflow-y: scroll;*/
-        /*    }*/
-
-        /*    #itemPriceListMainDiv{*/
-        /*        position: absolute;*/
-        /*        top: 0;*/
-        /*        right: 0;*/
-        /*        margin-right: 38px;*/
-        /*    }*/
-
-        /*    .prices{*/
-        /*        text-align: right;*/
-        /*    }*/
-
-        /*    .titleBill{*/
-        /*        left: 35%;*/
-        /*        -webkit-text-fill-color: #590067;*/
-        /*        width: 200px;*/
-        /*    }*/
-
-        /*    .fonts-size{*/
-        /*        font-size: 25px;*/
-        /*        width: 220px;*/
-        /*    }*/
-
-        /*    #pricesMainDiv{*/
-        /*        position: relative;*/
-        /*        top: 6rem;*/
-        /*    }*/
-
-        /*    #bill{*/
-        /*        position: absolute;*/
-        /*        left: 50%;*/
-        /*        top: 25%;*/
-        /*    }*/
-
-        /*    .billPricesLabel{*/
-        /*        width: 280px;*/
-
-        /*        position: absolute;*/
-        /*        top: 0;*/
-        /*        left: 40px;*/
-        /*    }*/
-
-        /*    .billPrices{*/
-        /*        position: absolute;*/
-        /*        right: 0;*/
-        /*    }*/
-
-        /*    .pricesContentPosition{*/
-        /*        padding-right: 50px;*/
-        /*    }*/
-
-        /*    #billBtn{*/
-        /*        position: relative;*/
-        /*        top: 15.5rem;*/
-        /*        padding-left: 12rem;*/
-        /*    }*/
-
-        /*    .btnSize{*/
-        /*        width: 150px;*/
-        /*    }*/
-
-        /*    #cancelBtn{*/
-        /*        background-color: #ED6400;*/
-        /*        border: 0;*/
-        /*    }*/
-
-        /*    #purchaseBtn{*/
-        /*        background-color: #03A100;*/
-        /*        border: 0;*/
-        /*    }*/
-
-        /*    .purpleTextColor{*/
-        /*        -webkit-text-fill-color: #590067;*/
-        /*    }*/
-        /*}*/
-
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
             #DashGroStore{
@@ -1285,7 +1057,7 @@
                     <input type="text" class="form-control" id="inputPrice" placeholder="price">
                 </div>
                 <div class="col-12">
-                    <button id="addToCartBtn" type="submit" class="btn btn-primary btnSize"> Add To Cart</button>
+                    <button id="addToCartBtn" type="submit" class="btn btn-primary btnSize addToCartBtn-color btn-addToCart btn-all"><span> Add To Cart </span></button>
                 </div>
                 <div id="line2"></div>
 
@@ -1349,8 +1121,8 @@
                 </div>
 
                 <div id="billBtn" class="col-12">
-                    <button id="cancelBtn" type="submit" class="btn btn-primary btnSize"> Cancel</button>
-                    <button id="purchaseBtn" type="submit" class="btn btn-primary inputFieldMargin btnSize"> Purchase</button>
+                    <button id="cancelBtn" type="submit" class="btn btn-primary btnSize custom-btn cancelBtn-color btn-cancel btn-all"><span> Cancel </span></button>
+                    <button id="purchaseBtn" type="submit" class="btn btn-primary inputFieldMargin btnSize purchaseBtn-color btn-purchase btn-all"><span> Purchase </span></button>
                 </div>
             </div>
             </form>
