1440 and 1024 devise responsive

--- a/signupPage.html
+++ b/signupPage.html
@@ -31,16 +31,117 @@
 
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
-
         }
 
         /* Styles for Laptop Large (1025px to 1366px) */
         @media all and (min-width: 1025px) and (max-width: 1366px) {
 
+            #telephone{
+                position: absolute;
+                top: 29rem;
+                left: 10px;
+            }
+
+            #inputField{
+                position: relative;
+                top: -5rem;
+            }
+
+            #logoParent{
+                position: absolute;
+                left: 15.5rem;
+            }
+
+            #logo{
+                width: 90px;
+                aspect-ratio: 1/1;
+            }
+
+            #signupLabel{
+                position: absolute;
+                top: 9rem;
+                left: 15rem;
+            }
+
+            #parent{
+                height: 568px;
+                position: relative;
+                top: 0;
+            }
+
+            #position{
+                width: 675px;
+                position: relative;
+                left: 670px;
+                top: -550px;
+            }
+
+            #signUp{
+                position: absolute;
+                left: 0px;
+                top: 15px;
+                font-size: 25px;
+            }
+
+            #loginBtn{
+                position: absolute;
+                top: -30px;
+                left: 0px;
+            }
+
+            #imageParent{
+                height: 580px;
+            }
+
+            .loginImage{
+                height: 598.8px;
+            }
         }
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
+            #telephone{
+                position: absolute;
+                top: 29rem;
+                left: 10px;
+            }
 
+            #inputField{
+                position: relative;
+                top: -4rem;
+            }
+
+            #logoParent{
+                position: absolute;
+                left: 16rem;
+            }
+
+            #logo{
+                width: 90px;
+                aspect-ratio: 1/1;
+            }
+
+            #signupLabel{
+                position: absolute;
+                top: 10rem;
+                left: 15.5rem;
+            }
+
+            #parent{
+                height: 568px;
+            }
+
+            #position{
+                width: 675px;
+                position: relative;
+                left: 715px;
+            }
+
+            #signUp{
+                position: absolute;
+                left: 20px;
+                top: 15px;
+                font-size: 25px;
+            }
         }
     </style>
 
