--- a/signupPage.html
+++ b/signupPage.html
@@ -31,6 +31,74 @@
 
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
+            #telephone{
+                position: absolute;
+                top: 29rem;
+                left: 10px;
+            }
+
+            #inputField{
+                position: relative;
+                top: -2rem;
+            }
+
+            #logoParent{
+                position: absolute;
+                left: 17.5rem;
+                top: 5rem;
+            }
+
+            #logo{
+                width: 90px;
+                aspect-ratio: 1/1;
+            }
+
+            #signupLabel{
+                position: absolute;
+                top: 12rem;
+                left: 17rem;
+            }
+
+            #parent{
+                height: 568px;
+                position: relative;
+                top: 0;
+            }
+
+            #position{
+                width: 675px;
+                position: relative;
+                left: 670px;
+                top: -550px;
+            }
+
+            #signUp{
+                position: absolute;
+                left: 0px;
+                top: 15px;
+                font-size: 25px;
+            }
+
+            #loginBtn{
+                position: absolute;
+                top: 40px;
+                left: 0px;
+            }
+
+            #imageParent{
+                height: 580px;
+            }
+
+            .loginImage{
+                height: 681px;
+                width: 600px;
+            }
+
+            #text{
+                position: absolute;
+                left: 154px;
+                top: 325px;
+            }
         }
 
         /* Styles for Laptop Large (1025px to 1366px) */
