1440 screen size responsive

--- a/loginPage.html
+++ b/loginPage.html
@@ -39,7 +39,116 @@
         }
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
+            #imageParent{
+                width: 45vw;
+                height: 545px;
+            }
 
+            .loginImage{
+                width: 40vw;
+                height: 100vh;
+                margin-bottom: 0;
+            }
+
+            #text{
+                -webkit-text-fill-color: white;
+                font-weight: bold;
+
+                position: relative;
+                bottom: 21rem;
+                left: 7.5rem;
+
+                opacity: 100%;
+            }
+
+            #signUpParent{
+                position: relative;
+                top: 1rem;
+                left: 37rem;
+
+                width: 100px;
+            }
+
+            #signUp{
+                text-align: right;
+                -webkit-text-fill-color: #590067;
+
+                position: absolute;
+                left: 2rem;
+                top: 0;
+                padding-right: 8px;
+                width: 100px;
+            }
+
+            #logoParent{
+                width: 20rem;
+                aspect-ratio: 1/1;
+
+                position: absolute;
+                top: 3rem;
+                left: 17rem;
+            }
+
+            #logo{
+                width: 130px;
+                aspect-ratio: 1/1;
+
+                border-radius: 100px;
+                border:2px solid #590067;
+            }
+
+            #parent{
+                width: 1358px;
+                height: 589px;
+            }
+
+            #position{
+                position: relative;
+                top: -36rem;
+                left: 43rem;
+            }
+
+            #loginLabel{
+                position: absolute;
+                top: 13rem;
+                left: 19rem;
+            }
+
+            #username{
+                position: absolute;
+                top: 17rem;
+                left: 10px;
+            }
+
+            #password{
+                position: absolute;
+                top: 23rem;
+                left: 10px;
+            }
+
+            #forgetPassword{
+                position: absolute;
+                top: 28rem;
+                right: 103px;
+            }
+
+            #labelForgetPassword{
+                -webkit-text-fill-color: black;
+            }
+
+            #loginBtnParent{
+                position: absolute;
+                top: 32rem;
+                left: 18rem;
+            }
+
+            #loginBtn{
+                background-color: #590067;
+                -webkit-text-fill-color: white;
+                width: 150px;
+
+                border: 0;
+            }
         }
     </style>
 
