--- a/loginPage.html
+++ b/loginPage.html
@@ -30,7 +30,118 @@
 
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
+            #imageParent{
+                width: 45vw;
+                height: 545px;
+            }
 
+            .loginImage{
+                width: 600px;
+                height: 679px;
+                margin-bottom: 0;
+            }
+
+            #text{
+                -webkit-text-fill-color: white;
+                font-weight: bold;
+
+                position: relative;
+                bottom: 22rem;
+                left: 9.5rem;
+
+                opacity: 100%;
+            }
+
+            #signUpParent{
+                position: relative;
+                top: 1rem;
+                left: 32rem;
+
+                width: 100px;
+            }
+
+            #signUp{
+                text-align: right;
+                -webkit-text-fill-color: #590067;
+
+                position: absolute;
+                left: -2rem;
+                top: 0;
+                padding-right: 8px;
+                width: 100px;
+            }
+
+            #logoParent{
+                width: 20rem;
+                aspect-ratio: 1/1;
+
+                position: absolute;
+                top: 3rem;
+                left: 10rem;
+            }
+
+            #logo{
+                width: 130px;
+                aspect-ratio: 1/1;
+
+                border-radius: 100px;
+                border:2px solid #590067;
+            }
+
+            #parent{
+                width: 1358px;
+                height: 589px;
+            }
+
+            #position{
+                position: relative;
+                top: -36rem;
+                left: 47.5rem;
+            }
+
+            #loginLabel{
+                position: absolute;
+                top: 13rem;
+                left: 12rem;
+            }
+
+            #username{
+                position: absolute;
+                top: 17rem;
+                left: 10px;
+                font-size: 21px;
+            }
+
+            #password{
+                position: absolute;
+                top: 23rem;
+                left: 10px;
+                font-size: 21px;
+            }
+
+            #forgetPassword{
+                position: absolute;
+                top: 28.3rem;
+                right: 74px;
+            }
+
+            #labelForgetPassword{
+                -webkit-text-fill-color: black;
+            }
+
+            #loginBtnParent{
+                position: absolute;
+                top: 32rem;
+                left: 10rem;
+            }
+
+            #loginBtn{
+                background-color: #590067;
+                -webkit-text-fill-color: white;
+                width: 150px;
+
+                border: 0;
+            }
         }
 
         /* Styles for Laptop Large (1025px to 1366px) */
