forget password all device responsive

--- a/forgetPassword.html
+++ b/forgetPassword.html
@@ -10,38 +10,136 @@
 
     <style>
 
-        /* Styles for Mobile Small (up to 320px) */
-        @media all and (max-width: 320px) {
-
-        }
-
-        /* Styles for Mobile Medium (321px to 375px) */
-        @media all and (min-width: 321px) and (max-width: 375px) {
-
-        }
-
-        /* Styles for Mobile Large (376px to 425px) */
-        @media all and (min-width: 376px) and (max-width: 425px) {
-
-        }
-
-        /* Styles for Tablet (426px to 768px) */
-        @media all and (min-width: 426px) and (max-width: 768px) {
-
-        }
-
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
+            #forgetPasswordLabel{
+                position: absolute;
+                top: 11.5rem;
+                left: 13rem;
+            }
 
+            #inputField{
+                position: relative;
+                top: -2rem;
+                left: 1rem;
+            }
+
+            #logoParent{
+                position: absolute;
+                top: 5rem;
+                left: 17.5rem;
+            }
+
+            #logo{
+                width: 90px;
+                aspect-ratio: 1/1;
+            }
+
+            #signupLabel{
+                position: absolute;
+                top: 9rem;
+                left: 15rem;
+            }
+
+            #parent{
+                height: 568px;
+                position: relative;
+                top: 0;
+            }
+
+            #position{
+                width: 675px;
+                position: relative;
+                left: 670px;
+                top: -550px;
+            }
+
+            #signUp{
+                position: absolute;
+                left: 0px;
+                top: 15px;
+                font-size: 25px;
+            }
+
+            #loginBtn{
+                position: absolute;
+                top: 30px;
+                left: 0px;
+            }
+
+            #text{
+                position: absolute;
+                left: 150px;
+                top: 320px;
+            }
+
+            .loginImage{
+                height: 681px;
+                width: 600px;
+            }
         }
 
-        /* Styles for Laptop Large (1025px to 1366px) */
-        @media all and (min-width: 1025px) and (max-width: 1366px) {
-
-        }
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
+            #forgetPasswordLabel{
+                position: absolute;
+                top: 10rem;
+                left: 14rem;
+            }
 
+            #inputField{
+                position: relative;
+                top: -4rem;
+                left: 3rem;
+            }
+
+            #logoParent{
+                position: absolute;
+                left: 18.5rem;
+            }
+
+            #logo{
+                width: 90px;
+                aspect-ratio: 1/1;
+            }
+
+            #signupLabel{
+                position: absolute;
+                top: 9rem;
+                left: 15rem;
+            }
+
+            #parent{
+                height: 568px;
+                position: relative;
+                top: 0;
+            }
+
+            #position{
+                width: 675px;
+                position: relative;
+                left: 670px;
+                top: -550px;
+            }
+
+            #signUp{
+                position: absolute;
+                left: 0px;
+                top: 15px;
+                font-size: 25px;
+            }
+
+            #loginBtn{
+                position: absolute;
+                top: -20px;
+                left: 0px;
+            }
+
+            #text{
+                position: absolute;
+                left: 134px;
+                top: 260px;
+            }
         }
     </style>
 
