change label name and inpup field placeorder

--- a/forgetPassword.html
+++ b/forgetPassword.html
@@ -171,12 +171,12 @@
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="username">
             </div>
             <div class="mb-3 col-10" id="telephone">
-                <label for="formGroupExampleInput2" class="form-label">Telephone</label>
-                <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="telephone">
+                <label for="formGroupExampleInput2" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Confirm Password">
             </div>
             <div class="mb-3 col-10" id="password">
-                <label for=" formGroupExampleInput2" class="form-label">password</label>
-                <input type="text" class="form-control" id=" formGroupExampleInput2" placeholder="telephone">
+                <label for=" formGroupExampleInput2" class="form-label">New Password</label>
+                <input type="password" class="form-control" id=" formGroupExampleInput2" placeholder="New Password">
             </div>
         </div>
 
