--- a/customerManage.html
+++ b/customerManage.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/buttonAnmation.css">
 
     <style>
 
@@ -100,7 +101,7 @@
             }
 
             .whiteTextColor{
-                -webkit-text-fill-color: white;
+                /*-webkit-text-fill-color: white;*/
             }
 
             .noBorder{
@@ -358,9 +359,9 @@
 
         <div id="crudButton" class="relativePosition">
             <div class="absolutePosition">
-                <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#newModal" type="button">New</button>
-                <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#updateModal" type="button">Update</button>
-                <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#removeModal" type="button">Remove</button>
+                <button class="noBorder btn btn-outline-secondary newButton btn-all" data-bs-toggle="modal" data-bs-target="#newModal" type="button"><span>New</span></button>
+                <button class="noBorder btn btn-outline-secondary updateButton btn-all" data-bs-toggle="modal" data-bs-target="#updateModal" type="button"><span>Update</span></button>
+                <button class="noBorder btn removeButton btn-all btn-remove removeBtn-color" data-bs-toggle="modal" data-bs-target="#removeModal" type="button"><span>Remove</span></button>
            </div>
         </div>
 
