--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
     </div>
 
     <div id="viewOrderBtnParent">
-        <button id ="updateButtonDash" type="button" class="btn btn-all btn-update updateBtn-color btn-size" data-bs-toggle="modal" data-bs-target="#updateOrderModal" ><span>Update</span></button>
+        <button id ="updateButtonDash" type="button" class="btn btn-size btn-all btn-update updateBtn-color " data-bs-toggle="modal" data-bs-target="#updateOrderModal" ><span>Update</span></button>
         <button id="removeButtonDash" type="button" class="btn btn-size btn-all btn-remove removeBtn-color " data-bs-toggle="modal" data-bs-target="#removeOrderModal"><span>Remove</span></button>
     </div>
 
