store new button animation

--- a/storeManage.html
+++ b/storeManage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/stylesheet/storeManageCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/buttonAnmation.css">
 
     <style>
 
@@ -465,9 +466,9 @@
 
     <div id="crudButton" class="relativePosition">
         <div class="absolutePosition">
-            <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#newModal" type="button">New</button>
-            <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#updateModal" type="button">Update</button>
-            <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#removeModal" type="button">Remove</button>
+            <button class="noBorder newButton btn-all btn-new newBtn-color" data-bs-toggle="modal" data-bs-target="#newModal" type="button"><span>New</span></button>
+            <button class="noBorder updateButton " data-bs-toggle="modal" data-bs-target="#updateModal" type="button"><span>Update</span></button>
+            <button class="noBorder removeButton " data-bs-toggle="modal" data-bs-target="#removeModal" type="button"><span>Remove</span></button>
         </div>
     </div>
 
