password capital first letter

--- a/loginPage.html
+++ b/loginPage.html
@@ -266,7 +266,7 @@
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="username">
             </div>
             <div class="mb-3 col-10" id="password">
-                <label for="formGroupExampleInput2" class="form-label">password</label>
+                <label for="formGroupExampleInput2" class="form-label">Password</label>
                 <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="password">
             </div>
 
