--- a/signupPage.html
+++ b/signupPage.html
@@ -226,7 +226,7 @@
                     <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="telephone">
                 </div>
                 <div class="mb-3 col-10" id="password">
-                    <label for=" formGroupExampleInput2" class="form-label">password</label>
+                    <label for=" formGroupExampleInput2" class="form-label">Password</label>
                     <input type="text" class="form-control" id=" formGroupExampleInput2" placeholder="password">
                 </div>
             </div>
