--- a/customerManage.html
+++ b/customerManage.html
@@ -100,10 +100,6 @@
                 width: 110px;
             }
 
-            .whiteTextColor{
-                /*-webkit-text-fill-color: white;*/
-            }
-
             .noBorder{
                 border: 0;
             }
@@ -306,6 +302,37 @@
             .close{
                 background-color: #ED6400;
                 border: 0;
+            }
+
+            /* Top and Bottom borders come in */
+            div.topBotomBordersIn a:before, div.topBotomBordersIn a:after
+            {
+                position: absolute;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background: #590067;
+                content: "";
+                opacity: 0;
+                transition: all 0.3s;
+            }
+
+            div.topBotomBordersIn a:before
+            {
+                top: 0px;
+                transform: translateY(-10px);
+            }
+
+            div.topBotomBordersIn a:after
+            {
+                bottom: 20px;
+                transform: translateY(10px);
+            }
+
+            div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
+            {
+                opacity: 1;
+                transform: translateY(0px);
             }
         }
     </style>
