card symbol remove

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                 <h2 class="cardText">00</h2>
                 <h5 class="cardText">Total Income</h5>
             </div>
-            <<div class="back">You can check here<br> the income received<br> by our shop so far</div>
+            <div class="back">You can check here<br> the income received<br> by our shop so far</div>
         </div>
     </div>
 
