--- a/forgetPassword.html
+++ b/forgetPassword.html
@@ -149,7 +149,7 @@
     <div id="parent" class="col-6">
         <div id="imageParent" class="col-6">
             <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
-            <h2 id="text">High Quality Goods</h2>
+            <h2 id="text" class="rise-text">High Quality Goods</h2>
         </div>
     </div>
     <div id="position" class="col-6">
