customer,store,place order section create

--- a/index.html
+++ b/index.html
@@ -677,6 +677,7 @@
 </head>
 <body>
 
+<!--Dashboard-->
 <section >
     <header id="header">
         <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
@@ -715,6 +716,16 @@
     </header>
 </section>
 
+<!--Customer-->
+<section></section>
+
+<!--Store-->
+<section></section>
+
+<!--Place order-->
+<section></section>
+
+<!--Footer-->
 <section class="">
     <div class="row margin fonts">
         <div id="div1" class="card shadow col-xs card-container">
